<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ardupilot_ros</name>
  <version>1.0.0</version>
  <description>ardupilot_ros meta-package</description>
  <!-- <maintainer email="">Ryan Friedman</maintainer> -->
  <maintainer email="pedrofuoco6@gmail.com">Pedro Fuoco</maintainer>
  <maintainer email="sharma.sanket272@gmail.com">Sanket Sharma</maintainer>
  <license>GPLv3</license>
  <exec_depend>ardupilot_cartographer</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
